--- a/blogpost.html
+++ b/blogpost.html
@@ -1,11 +1,14 @@
 <html>
     <head>
         <title>Bienvenido a Hyperblog 2.0</title>
-        <link rel="stylesheet" href="css/estilos.css"> 
+        <link rel="stylesheet" href="css/estilos.css">
+        <meta charset="utf-8" />
+         
     </head>
 <body>
     <div id="container">
         <div id="cabecera">
+            <img id="logo" src="imagenes/dragon.png" alt="Logo" />
             Hyperblog
             <span id="tagline">Tu blog de cabecera</span>
 
